--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ psutil==7.1.0
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==21.0.0
 pycparser==2.23
 Pygments==2.19.2
 pyparsing==3.2.5
@@ -107,6 +108,7 @@ traitlets==5.14.3
 types-python-dateutil==2.9.0.20251008
 typing_extensions==4.15.0
 tzdata==2025.2
+ucimlrepo==0.0.7
 uri-template==1.3.0
 urllib3==2.5.0
 wcwidth==0.2.14
