--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+agate==1.9.1
+alembic==1.17.0
+annotated-types==0.7.0
 anyio==4.11.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
@@ -5,37 +8,94 @@ arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.4.0
+Authlib==1.6.5
+azure-common==1.1.28
+azure-core==1.35.1
+azure-identity==1.24.0
+azure-mgmt-core==1.6.0
+azure-mgmt-rdbms==10.1.0
+azure-mgmt-resource==24.0.0
+azure-mgmt-subscription==3.1.1
 babel==2.17.0
+bcrypt==4.3.0
 beautifulsoup4==4.14.2
+bidict==0.23.1
 bleach==6.2.0
+blinker==1.9.0
+boto3==1.40.50
+botocore==1.40.50
+Brotli==1.1.0
+cachetools==6.2.1
 certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.3
+cffi==1.17.1
+charset-normalizer==3.4.4
+click==8.3.0
 colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.3
+cryptography==45.0.7
 cycler==0.12.1
+daff==1.4.2
+dbt-adapters==1.17.2
+dbt-common==1.32.0
+dbt-core==1.10.13
+dbt-extractor==0.6.0
+dbt-postgres==1.9.1
+dbt-protos==1.0.382
+dbt-semantic-interfaces==0.9.0
 debugpy==1.8.17
 decorator==5.2.1
+deepdiff==8.6.1
 defusedxml==0.7.1
+dnspython==2.8.0
+email-validator==2.3.0
 executing==2.2.1
 fastjsonschema==2.21.2
+Flask==3.1.2
+flask-babel==4.0.0
+Flask-Compress==1.18
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-Paranoid==0.3.0
+Flask-Principal==0.4.0
+Flask-Security-Too==5.6.2
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 fonttools==4.60.1
 fqdn==1.5.1
 gitdb==4.0.12
 GitPython==3.1.45
+google-api-core==2.26.0
+google-api-python-client==2.184.0
+google-auth==2.41.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 ipykernel==6.30.1
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
+isodate==0.6.1
 isoduration==20.11.0
+itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.3.0
 jedi==0.19.2
+jeepney==0.9.0
 Jinja2==3.1.6
+jmespath==1.0.1
 json5==0.12.1
+jsonformatter==0.3.4
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
@@ -49,69 +109,129 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.4.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+keyring==25.6.0
 kiwisolver==1.4.9
 lark==1.3.0
+ldap3==2.9.1
+leather==0.4.0
+libgravatar==1.0.4
+Logbook==1.5.3
+Mako==1.3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mashumaro==3.14
 matplotlib==3.10.7
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+minimal-snowplow-tracker==0.0.2
 mistune==3.1.4
+more-itertools==10.8.0
+msal==1.34.0
+msal-extensions==1.3.1
+msgpack==1.1.2
+msrest==0.7.1
 nbclient==0.10.2
 nbconvert==7.16.6
 nbdime==4.0.2
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.5
 notebook==7.4.7
 notebook_shim==0.2.4
 numpy==2.3.3
+oauthlib==3.3.1
+orderly-set==5.5.0
 packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
+paramiko==3.5.1
+parsedatetime==2.6
 parso==0.8.5
+passlib==1.7.4
+pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.5.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
-psutil==7.1.0
+proto-plus==1.26.1
+protobuf==6.32.1
+psutil==7.0.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
+pydantic==2.12.1
+pydantic_core==2.41.3
 Pygments==2.19.2
+PyJWT==2.10.1
+PyNaCl==1.6.0
+pyotp==2.9.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-engineio==4.12.3
 python-json-logger==4.0.0
+python-slugify==8.0.4
+python-socketio==5.14.1
+pytimeparse==1.1.8
 pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
-referencing==0.36.2
+pyzstd==0.18.0
+qrcode==8.2
+referencing==0.37.0
 requests==2.32.5
+requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
+rich==14.2.0
 rpds-py==0.27.1
+rsa==4.9.1
+s3transfer==0.14.0
 seaborn==0.13.2
+SecretStorage==3.4.0
 Send2Trash==1.8.3
 setuptools==80.9.0
+shellingham==1.5.4
+simple-websocket==1.1.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+snowplow-tracker==1.1.0
 soupsieve==2.8
 SQLAlchemy==2.0.44
+sqlparse==0.5.3
+sshtunnel==0.4.0
 stack-data==0.6.3
 terminado==0.18.1
+text-unidecode==1.3
 tinycss2==1.4.0
 tornado==6.5.2
 traitlets==5.14.3
+typer==0.16.1
 types-python-dateutil==2.9.0.20251008
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
 ucimlrepo==0.0.7
 uri-template==1.3.0
+uritemplate==4.2.0
 urllib3==2.5.0
+user-agents==2.2.0
 wcwidth==0.2.14
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.9.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+WTForms==3.2.1
+zipp==3.23.0
